--- a/frontend/src/pages/game/game.css
+++ b/frontend/src/pages/game/game.css
@@ -1,3 +1,11 @@
+.background {
+    background-image: linear-gradient(to top, #cfd9df 0%, #e2ebf0 100%);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    height: 739px;
+}
+
 .title {
     display: flex;
     align-items: center;
